# wikivis

./: .gitignore  .gitmodules  CMakeLists.txt
app/: main.cpp
ext/gloost/: README.TXT
ext/gloost/contrib/tinyxml2/library_build_with_codeblocks/: tinyxml2-cbp.cbp
ext/gloost/contrib/tinyxml2/src/: tinyxml2.h
ext/gloost/shaders/: color_only.fs  shadowmap_example_shader.fs  volume_shader_0.01.vs
ext/gloost/src/gloost/: Application.cpp  BinaryFile.cpp  BitMask.h  BoundingBox.h  BoundingVolume.h  Camera.cpp  CmdParser.h  Color4.cpp  Dcs.cpp  Dcs.h  FirstPersonCamera.h  FontCache.cpp  FontCache.h  Frustum.cpp  GbmLoader.cpp  GbmLoader.h  GbmWriter.cpp  HandleManager.h  Image.cpp  InterleavedAttributes.h  IsoSurfaceGeneration.h  Material.cpp  Material.h  Mesh.cpp  MeshFactory.h  MeshLoader.cpp  MeshLoader.h  ObjLoader.cpp  ObjLoader.h  OrientedPlane.cpp  Particle.cpp  ParticleHandler.cpp  ParticleHandler.h  PerspectiveCamera.cpp  Plane.cpp  Plane.h  Point3.cpp  Point3.h  PointLight.cpp  Quaternion.cpp  (+21 more)
ext/gloost/src/gloost/animation/: Envelope.cpp  Envelope.h  EnvelopeSet.h  Keyframe.h
ext/gloost/src/gloost/gl/: GBuffer.h  GlGarbageCollector.cpp  Ibo.h  MultiGlContextEntity.cpp  ShaderProgram.cpp  UniformSet.h  Vbo.h  gloostGlUtil.h
ext/gloost/src/gloost/human_input/: ArcBall.cpp  GenericSignalMapper.h  MouseState.h
ext/gloost/src/gloost/log/: GlobalLog.cpp  GlobalLog.h  Log.cpp  Log.h  Message.cpp  Message.h
ext/gloost/src/gloost/network/: ZeroMqNode.cpp  ZeroMqNode.h  ZeroMqStateServer.cpp
ext/gloost/src/gloost/obsolete/: Brush.h  Drawable.h  Shader.cpp  TextLog.cpp  TextureText.h
ext/gloost/src/gloost/postal/: Hub.cpp  Message.cpp  MessageWrapper.cpp  PathSystemNode.cpp  PathSystemNode.h  common.h
ext/gloost/src/gloost/util/: DirectoryList.h  NineFace.h  Path.cpp  (+6 more)
ext/gloost/src/purr/: Handle.h
ext/gloost/src/rendermod/: ModuleBase.cpp  ModuleBase.h  RendererBase.cpp  RendererBase.h
ext/wikidb/: CMakeLists.txt  createdb.cpp
ext/wikidb/contrib/lib/: libcli.la  libfastdb.la
ext/wikidb/include/: contract.h  record_not_found.h  wikidb.h
ext/wikidb/src/: SimPair.cpp  contract.cpp  wikidb.cpp
ext/wikidb/tests/: db_tests.cpp  wikidbtest.cpp
shaders/: cat_node.gs  edge.vs
src/: CMakeLists.txt  Ctrl.h  Gui.cpp  Gui.h  Model.cpp  Renderer.h
vta/: .gitignore
vta/wikipedia-vis/app/: CMakeLists.txt
vta/wikipedia-vis/shaders/: edge.frag  node.vert
vta/wikipedia-vis/src/: Ctrl.cpp  Model.cpp  Renderer.h
vta/wikiutil/: wikitool.py  wikiutil.py
wikipedia-vis/: .gitignore  CMakeLists.txt  README.md  test_dump
wikipedia-vis/app/: CMakeLists.txt  main.cpp
wikipedia-vis/ext/gloost/: CMakeLists.txt
wikipedia-vis/ext/gloost/shaders/: color_only.vs  shadowmap_example_shader.vs
wikipedia-vis/ext/gloost/src/gloost/: Application.h  BinaryBundle.cpp  BinaryBundle.h  BitMask.cpp  BoundingBox.cpp  BoundingVolume.cpp  CmdParser.cpp  FirstPersonCamera.cpp  FreeTypeWriter.cpp  FreeTypeWriter.h  Frustum.h  GlobalProperties.cpp  Image.h  InterleavedAttributes.cpp  Matrix.h  MatrixStack.h  MeshWriter.h  ObjMatFile.h  OrientedPlane.h  PlyLoader.cpp  PropertySet.h  RandomSequence.h  Ray.h  Rect.cpp  Scene.h  ScreenCamera.h  TextureAtlas.h  TextureManager.h  UniformTypes.cpp  Vector3.h  Viewport.h  gloostConfig.h  gloostHelper.h  gloostSerial.h
wikipedia-vis/ext/gloost/src/gloost/gl/: GBuffer.cpp  GlGarbageCollector.h  Tbo.cpp  Tbo.h  Texture.cpp  Texture.h
wikipedia-vis/ext/gloost/src/gloost/human_input/: KeyboardState.h
wikipedia-vis/ext/gloost/src/gloost/log/: LogLevel.h
wikipedia-vis/ext/gloost/src/gloost/log/observer/: TerminalOutput.h  ToXmlFile.cpp
wikipedia-vis/ext/gloost/src/gloost/network/: ZeroMqStateClient.cpp  ZeroMqStateClient.h
wikipedia-vis/ext/gloost/src/gloost/obsolete/: Brush.cpp  Drawable.cpp  DrawableCompound.h  Shader.h  TextLog.h  TextureText.cpp
wikipedia-vis/ext/gloost/src/gloost/obsolete/gl/: gloostRenderGoodies.h
wikipedia-vis/ext/gloost/src/gloost/obsolete/graph/: Collector.h  CoreManager.h  DrawAction.h  IntersectAction.cpp  MatrixCore.h  PureCore.cpp  ShaderCore.h  VboCore.cpp
wikipedia-vis/ext/gloost/src/gloost/obsolete/gui/: Button.h  Pad.cpp  PropertyInspector.cpp  PropertyInspector.h  Slider.cpp  Slider.h  TextInput.cpp
wikipedia-vis/ext/gloost/src/gloost/obsolete/sdlsound/: SdlSound.cpp  SdlSound.h  SdlSoundJob.h
wikipedia-vis/ext/gloost/src/gloost/obsolete/vxfvgui/: ListWidget.cpp  SliderWidget.h  TextFieldWidget.h  ToggleWidget.cpp  VxfvGui.cpp  VxfvGui.h  VxfvWidget.cpp  WindowBorderWidget.cpp  WindowWidget.h
wikipedia-vis/ext/gloost/src/gloost/postal/: Message.h  MessageWrapper.h  QueueSubscriber.h  Subscriber.cpp  Subscriber.h
wikipedia-vis/ext/gloost/src/gloost/templates/: EmptyClass.h
wikipedia-vis/ext/gloost/src/gloost/util/: GenericManager.h  TransferFunctionGenerator.cpp  TransferFunctionGenerator.h  ValueRange.h  ValueToWavelength.cpp
wikipedia-vis/ext/gloost/src/purr/: EmptyClass.h
wikipedia-vis/ext/gloost/src/purr/action/: BuildMesh.cpp  CallEvent.h  GraphToGeometry.cpp  RemoveNodes.cpp  RemoveNodes.h  TopologyList.cpp  TopologyList.h
wikipedia-vis/ext/gloost/src/purr/behavior/: BehaviorBase.cpp  KeepWithinParentBoundaries.h  SubgraphRoot.cpp  VerticalSubnodeLayout.h
wikipedia-vis/ext/gloost/src/purr/event/: EventData.h  HumanInput.cpp  HumanInput.h
wikipedia-vis/ext/gloost/src/purr/renderer/: RenderMod_Nodes.cpp
wikipedia-vis/ext/wikidb/: CMakeLists.txt  createdb.cpp
wikipedia-vis/ext/wikidb/contrib/lib/: libcli.so.2  libfastdb.so.2.0.0
wikipedia-vis/ext/wikidb/include/: SimPair.h  contract.h  wikidb.h
wikipedia-vis/ext/wikidb/src/: SimPair.cpp  contract.cpp  wikidb.cpp
wikipedia-vis/ext/wikidb/tests/: wikidbtest.cpp
wikipedia-vis/shaders/: edge.frag  edge.vert  node.frag  node.gs  node.vert  node.vs  texture.fs  texture.vs
wikipedia-vis/src/: CMakeLists.txt  Controller.cpp  Controller.h  Ctrl.cpp  Ctrl.h  Geometry.h  Gui.cpp  Gui.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  View.cpp  View.h
wikiutil/: readme.md  requirements.txt  wikitool.py  wikiutil.py
(+153 files in other folders)
